// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._1xwqgg7z,html._1xwqgg7z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_1piqufd0 _1fan4b818 _1fan4b81b">
+        <div class="_1bxiapk0 _1xwqgg77i _1xwqgg76e _1xwqgg79q _1xwqgg78m _1xwqgg75e _1fan4b818 _1fan4b81b _1xwqgg732 _1xwqgg735">
+          <span class="_1bxiapk0 _1xwqgg74y _1fan4b80 _1fan4b81 _1fan4b821 uo8yjc4 _1fan4b8d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1bxiapk0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] ._1bxiapk0 {
  outline: none;
}
._1bxiapk1 {
  display: block;
}
._1bxiapk2 {
  line-height: 1;
}
._1bxiapk3 {
  list-style: none;
}
._1bxiapk4 {
  quotes: none;
}
._1bxiapk4:after,
._1bxiapk4:before {
  content: "";
}
._1bxiapk5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1bxiapk6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
._1bxiapk7 {
  background-color: transparent;
}
._1bxiapk9 {
  color: inherit;
}
._1bxiapka:disabled {
  opacity: 1;
}
._1bxiapka::-ms-expand {
  display: none;
}
._1bxiapkc[type="number"] {
  -moz-appearance: textfield;
}
._1bxiapkc[type="number"]::-webkit-inner-spin-button,
._1bxiapkc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1bxiapkc::-ms-clear {
  display: none;
}
._1bxiapkc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1bxiapkf {
  color: inherit;
  text-decoration: none;
}
._1xwqgg70 {
  overflow: hidden;
}
._1xwqgg71 {
  overflow: scroll;
}
._1xwqgg72 {
  overflow: visible;
}
._1xwqgg73 {
  overflow: auto;
}
._1xwqgg74 {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
._1xwqgg75 {
  outline: none;
}
._1xwqgg76 {
  opacity: 0;
}
._1xwqgg77 {
  z-index: 0;
}
._1xwqgg78 {
  z-index: 1;
}
._1xwqgg79 {
  z-index: 2;
}
._1xwqgg7a {
  z-index: 90;
}
._1xwqgg7b {
  z-index: 100;
}
._1xwqgg7c {
  z-index: 200;
}
._1xwqgg7d {
  z-index: 290;
}
._1xwqgg7e {
  z-index: 300;
}
._1xwqgg7f {
  z-index: 400;
}
._1xwqgg7g {
  cursor: default;
}
._1xwqgg7h {
  cursor: pointer;
}
._1xwqgg7i {
  pointer-events: none;
}
._1xwqgg7j {
  top: 0;
}
._1xwqgg7k {
  bottom: 0;
}
._1xwqgg7l {
  left: 0;
}
._1xwqgg7m {
  right: 0;
}
._1xwqgg7n {
  height: 100%;
}
._1xwqgg7o {
  height: var(--fd6ffp9);
}
._1xwqgg7p {
  width: 100%;
}
._1xwqgg7q {
  width: var(--fd6ffp9);
}
._1xwqgg7r {
  min-width: 0;
}
._1xwqgg7s {
  max-width: var(--fd6ffp11);
}
._1xwqgg7t {
  max-width: var(--fd6ffp12);
}
._1xwqgg7u {
  max-width: var(--fd6ffp13);
}
._1xwqgg7v {
  max-width: var(--fd6ffp14);
}
._1xwqgg7w {
  transition: var(--fd6ffp5i);
}
._1xwqgg7x {
  transition: var(--fd6ffp5j);
}
._1xwqgg7y:active {
  transform: var(--fd6ffp5k);
}
html._1xwqgg7z ._1xwqgg711,
html:not(._1xwqgg7z) ._1xwqgg710 {
  background: var(--fd6ffp1t);
}
html._1xwqgg7z ._1xwqgg713,
html:not(._1xwqgg7z) ._1xwqgg712 {
  background: var(--fd6ffp1u);
}
html._1xwqgg7z ._1xwqgg715,
html:not(._1xwqgg7z) ._1xwqgg714 {
  background: var(--fd6ffp1v);
}
html._1xwqgg7z ._1xwqgg717,
html:not(._1xwqgg7z) ._1xwqgg716 {
  background: var(--fd6ffp1w);
}
html._1xwqgg7z ._1xwqgg719,
html:not(._1xwqgg7z) ._1xwqgg718 {
  background: var(--fd6ffp1x);
}
html._1xwqgg7z ._1xwqgg71b,
html:not(._1xwqgg7z) ._1xwqgg71a {
  background: var(--fd6ffp1y);
}
html._1xwqgg7z ._1xwqgg71d,
html:not(._1xwqgg7z) ._1xwqgg71c {
  background: var(--fd6ffp1z);
}
html._1xwqgg7z ._1xwqgg71f,
html:not(._1xwqgg7z) ._1xwqgg71e {
  background: var(--fd6ffp20);
}
html._1xwqgg7z ._1xwqgg71h,
html:not(._1xwqgg7z) ._1xwqgg71g {
  background: var(--fd6ffp21);
}
html._1xwqgg7z ._1xwqgg71j,
html:not(._1xwqgg7z) ._1xwqgg71i {
  background: var(--fd6ffp22);
}
html._1xwqgg7z ._1xwqgg71l,
html:not(._1xwqgg7z) ._1xwqgg71k {
  background: var(--fd6ffp23);
}
html._1xwqgg7z ._1xwqgg71n,
html:not(._1xwqgg7z) ._1xwqgg71m {
  background: var(--fd6ffp24);
}
html._1xwqgg7z ._1xwqgg71p,
html:not(._1xwqgg7z) ._1xwqgg71o {
  background: var(--fd6ffp25);
}
html._1xwqgg7z ._1xwqgg71r,
html:not(._1xwqgg7z) ._1xwqgg71q {
  background: var(--fd6ffp26);
}
html._1xwqgg7z ._1xwqgg71t,
html:not(._1xwqgg7z) ._1xwqgg71s {
  background: var(--fd6ffp27);
}
html._1xwqgg7z ._1xwqgg71v,
html:not(._1xwqgg7z) ._1xwqgg71u {
  background: var(--fd6ffp28);
}
html._1xwqgg7z ._1xwqgg71x,
html:not(._1xwqgg7z) ._1xwqgg71w {
  background: var(--fd6ffp29);
}
html._1xwqgg7z ._1xwqgg71z,
html:not(._1xwqgg7z) ._1xwqgg71y {
  background: var(--fd6ffp2a);
}
html._1xwqgg7z ._1xwqgg721,
html:not(._1xwqgg7z) ._1xwqgg720 {
  background: var(--fd6ffp2b);
}
html._1xwqgg7z ._1xwqgg723,
html:not(._1xwqgg7z) ._1xwqgg722 {
  background: var(--fd6ffp2c);
}
html._1xwqgg7z ._1xwqgg725,
html:not(._1xwqgg7z) ._1xwqgg724 {
  background: var(--fd6ffp2d);
}
html._1xwqgg7z ._1xwqgg727,
html:not(._1xwqgg7z) ._1xwqgg726 {
  background: var(--fd6ffp2e);
}
html._1xwqgg7z ._1xwqgg729,
html:not(._1xwqgg7z) ._1xwqgg728 {
  background: var(--fd6ffp2f);
}
html._1xwqgg7z ._1xwqgg72b,
html:not(._1xwqgg7z) ._1xwqgg72a {
  background: var(--fd6ffp2g);
}
html._1xwqgg7z ._1xwqgg72d,
html:not(._1xwqgg7z) ._1xwqgg72c {
  background: var(--fd6ffp2h);
}
html._1xwqgg7z ._1xwqgg72f,
html:not(._1xwqgg7z) ._1xwqgg72e {
  background: var(--fd6ffp2i);
}
html._1xwqgg7z ._1xwqgg72h,
html:not(._1xwqgg7z) ._1xwqgg72g {
  background: var(--fd6ffp2j);
}
html._1xwqgg7z ._1xwqgg72j,
html:not(._1xwqgg7z) ._1xwqgg72i {
  background: var(--fd6ffp2k);
}
html._1xwqgg7z ._1xwqgg72l,
html:not(._1xwqgg7z) ._1xwqgg72k {
  background: var(--fd6ffp2l);
}
html._1xwqgg7z ._1xwqgg72n,
html:not(._1xwqgg7z) ._1xwqgg72m {
  background: var(--fd6ffp2m);
}
html._1xwqgg7z ._1xwqgg72p,
html:not(._1xwqgg7z) ._1xwqgg72o {
  background: var(--fd6ffp2n);
}
html._1xwqgg7z ._1xwqgg72r,
html:not(._1xwqgg7z) ._1xwqgg72q {
  background: var(--fd6ffp2o);
}
html._1xwqgg7z ._1xwqgg72t,
html:not(._1xwqgg7z) ._1xwqgg72s {
  background: var(--fd6ffp2p);
}
html._1xwqgg7z ._1xwqgg72v,
html:not(._1xwqgg7z) ._1xwqgg72u {
  background: var(--fd6ffp2q);
}
html._1xwqgg7z ._1xwqgg72x,
html:not(._1xwqgg7z) ._1xwqgg72w {
  background: var(--fd6ffp2r);
}
html._1xwqgg7z ._1xwqgg72z,
html:not(._1xwqgg7z) ._1xwqgg72y {
  background: var(--fd6ffp2s);
}
html._1xwqgg7z ._1xwqgg731,
html:not(._1xwqgg7z) ._1xwqgg730 {
  background: var(--fd6ffp2t);
}
html._1xwqgg7z ._1xwqgg733,
html:not(._1xwqgg7z) ._1xwqgg732 {
  background: var(--fd6ffp2u);
}
html._1xwqgg7z ._1xwqgg735,
html:not(._1xwqgg7z) ._1xwqgg734 {
  background: var(--fd6ffp2v);
}
html._1xwqgg7z ._1xwqgg737,
html:not(._1xwqgg7z) ._1xwqgg736 {
  box-shadow: var(--fd6ffp5l);
}
html._1xwqgg7z ._1xwqgg739,
html:not(._1xwqgg7z) ._1xwqgg738 {
  box-shadow: var(--fd6ffp5m);
}
html._1xwqgg7z ._1xwqgg73b,
html:not(._1xwqgg7z) ._1xwqgg73a {
  box-shadow: var(--fd6ffp5n);
}
html._1xwqgg7z ._1xwqgg73d,
html:not(._1xwqgg7z) ._1xwqgg73c {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpf);
}
html._1xwqgg7z ._1xwqgg73f,
html:not(._1xwqgg7z) ._1xwqgg73e {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpg);
}
html._1xwqgg7z ._1xwqgg73h,
html:not(._1xwqgg7z) ._1xwqgg73g {
  box-shadow: inset 0 0 0 var(--fd6ffpz) var(--fd6ffpf);
}
html._1xwqgg7z ._1xwqgg73j,
html:not(._1xwqgg7z) ._1xwqgg73i {
  box-shadow: inset 0 0 0 var(--fd6ffpz) var(--fd6ffpg);
}
html._1xwqgg7z ._1xwqgg73l,
html:not(._1xwqgg7z) ._1xwqgg73k {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffph);
}
html._1xwqgg7z ._1xwqgg73n,
html:not(._1xwqgg7z) ._1xwqgg73m {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpi);
}
html._1xwqgg7z ._1xwqgg73p,
html:not(._1xwqgg7z) ._1xwqgg73o {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpj);
}
html._1xwqgg7z ._1xwqgg73r,
html:not(._1xwqgg7z) ._1xwqgg73q {
  box-shadow: inset 0 0 0 var(--fd6ffpz) var(--fd6ffpj);
}
html._1xwqgg7z ._1xwqgg73t,
html:not(._1xwqgg7z) ._1xwqgg73s {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpk);
}
html._1xwqgg7z ._1xwqgg73v,
html:not(._1xwqgg7z) ._1xwqgg73u {
  box-shadow: inset 0 0 0 var(--fd6ffpz) var(--fd6ffpk);
}
html._1xwqgg7z ._1xwqgg73x,
html:not(._1xwqgg7z) ._1xwqgg73w {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpl);
}
html._1xwqgg7z ._1xwqgg73z,
html:not(._1xwqgg7z) ._1xwqgg73y {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpn);
}
html._1xwqgg7z ._1xwqgg741,
html:not(._1xwqgg7z) ._1xwqgg740 {
  box-shadow: inset 0 0 0 var(--fd6ffpz) var(--fd6ffpn);
}
html._1xwqgg7z ._1xwqgg743,
html:not(._1xwqgg7z) ._1xwqgg742 {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpo);
}
html._1xwqgg7z ._1xwqgg745,
html:not(._1xwqgg7z) ._1xwqgg744 {
  box-shadow: inset 0 0 0 var(--fd6ffpz) var(--fd6ffpo);
}
html._1xwqgg7z ._1xwqgg747,
html:not(._1xwqgg7z) ._1xwqgg746 {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpp);
}
html._1xwqgg7z ._1xwqgg749,
html:not(._1xwqgg7z) ._1xwqgg748 {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpq);
}
html._1xwqgg7z ._1xwqgg74b,
html:not(._1xwqgg7z) ._1xwqgg74a {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpr);
}
html._1xwqgg7z ._1xwqgg74d,
html:not(._1xwqgg7z) ._1xwqgg74c {
  box-shadow: inset 0 0 0 var(--fd6ffpz) var(--fd6ffpr);
}
html._1xwqgg7z ._1xwqgg74f,
html:not(._1xwqgg7z) ._1xwqgg74e {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffps);
}
html._1xwqgg7z ._1xwqgg74h,
html:not(._1xwqgg7z) ._1xwqgg74g {
  box-shadow: inset 0 0 0 var(--fd6ffpz) var(--fd6ffps);
}
html._1xwqgg7z ._1xwqgg74j,
html:not(._1xwqgg7z) ._1xwqgg74i {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpt);
}
html._1xwqgg7z ._1xwqgg74l,
html:not(._1xwqgg7z) ._1xwqgg74k {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpu);
}
html._1xwqgg7z ._1xwqgg74n,
html:not(._1xwqgg7z) ._1xwqgg74m {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpv);
}
html._1xwqgg7z ._1xwqgg74p,
html:not(._1xwqgg7z) ._1xwqgg74o {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpw);
}
html._1xwqgg7z ._1xwqgg74r,
html:not(._1xwqgg7z) ._1xwqgg74q {
  box-shadow: inset 0 0 0 var(--fd6ffpy) var(--fd6ffpx);
}
html._1xwqgg7z ._1xwqgg74t,
html:not(._1xwqgg7z) ._1xwqgg74s {
  box-shadow: 0 0 0 var(--fd6ffp10) var(--fd6ffpm);
}
._1xwqgg74u {
  display: none;
}
._1xwqgg74y {
  display: block;
}
._1xwqgg752 {
  display: inline;
}
._1xwqgg756 {
  display: inline-block;
}
._1xwqgg75a {
  display: flex;
}
._1xwqgg75e {
  position: relative;
}
._1xwqgg75i {
  position: absolute;
}
._1xwqgg75m {
  position: fixed;
}
._1xwqgg75q {
  border-radius: 0;
}
._1xwqgg75u {
  border-radius: 9999px;
}
._1xwqgg75y {
  border-radius: var(--fd6ffpb);
}
._1xwqgg762 {
  border-radius: var(--fd6ffpc);
}
._1xwqgg766 {
  border-radius: var(--fd6ffpd);
}
._1xwqgg76a {
  border-radius: var(--fd6ffpe);
}
._1xwqgg76e {
  padding-top: var(--fd6ffp0);
}
._1xwqgg76i {
  padding-top: var(--fd6ffp1);
}
._1xwqgg76m {
  padding-top: var(--fd6ffp2);
}
._1xwqgg76q {
  padding-top: var(--fd6ffp3);
}
._1xwqgg76u {
  padding-top: var(--fd6ffp4);
}
._1xwqgg76y {
  padding-top: var(--fd6ffp5);
}
._1xwqgg772 {
  padding-top: var(--fd6ffp6);
}
._1xwqgg776 {
  padding-top: var(--fd6ffp7);
}
._1xwqgg77a {
  padding-top: var(--fd6ffp8);
}
._1xwqgg77e {
  padding-top: 0;
}
._1xwqgg77i {
  padding-bottom: var(--fd6ffp0);
}
._1xwqgg77m {
  padding-bottom: var(--fd6ffp1);
}
._1xwqgg77q {
  padding-bottom: var(--fd6ffp2);
}
._1xwqgg77u {
  padding-bottom: var(--fd6ffp3);
}
._1xwqgg77y {
  padding-bottom: var(--fd6ffp4);
}
._1xwqgg782 {
  padding-bottom: var(--fd6ffp5);
}
._1xwqgg786 {
  padding-bottom: var(--fd6ffp6);
}
._1xwqgg78a {
  padding-bottom: var(--fd6ffp7);
}
._1xwqgg78e {
  padding-bottom: var(--fd6ffp8);
}
._1xwqgg78i {
  padding-bottom: 0;
}
._1xwqgg78m {
  padding-right: var(--fd6ffp0);
}
._1xwqgg78q {
  padding-right: var(--fd6ffp1);
}
._1xwqgg78u {
  padding-right: var(--fd6ffp2);
}
._1xwqgg78y {
  padding-right: var(--fd6ffp3);
}
._1xwqgg792 {
  padding-right: var(--fd6ffp4);
}
._1xwqgg796 {
  padding-right: var(--fd6ffp5);
}
._1xwqgg79a {
  padding-right: var(--fd6ffp6);
}
._1xwqgg79e {
  padding-right: var(--fd6ffp7);
}
._1xwqgg79i {
  padding-right: var(--fd6ffp8);
}
._1xwqgg79m {
  padding-right: 0;
}
._1xwqgg79q {
  padding-left: var(--fd6ffp0);
}
._1xwqgg79u {
  padding-left: var(--fd6ffp1);
}
._1xwqgg79y {
  padding-left: var(--fd6ffp2);
}
._1xwqgg7a2 {
  padding-left: var(--fd6ffp3);
}
._1xwqgg7a6 {
  padding-left: var(--fd6ffp4);
}
._1xwqgg7aa {
  padding-left: var(--fd6ffp5);
}
._1xwqgg7ae {
  padding-left: var(--fd6ffp6);
}
._1xwqgg7ai {
  padding-left: var(--fd6ffp7);
}
._1xwqgg7am {
  padding-left: var(--fd6ffp8);
}
._1xwqgg7aq {
  padding-left: 0;
}
._1xwqgg7au {
  margin-top: var(--fd6ffp0);
}
._1xwqgg7ay {
  margin-top: var(--fd6ffp1);
}
._1xwqgg7b2 {
  margin-top: var(--fd6ffp2);
}
._1xwqgg7b6 {
  margin-top: var(--fd6ffp3);
}
._1xwqgg7ba {
  margin-top: var(--fd6ffp4);
}
._1xwqgg7be {
  margin-top: var(--fd6ffp5);
}
._1xwqgg7bi {
  margin-top: var(--fd6ffp6);
}
._1xwqgg7bm {
  margin-top: var(--fd6ffp7);
}
._1xwqgg7bq {
  margin-top: var(--fd6ffp8);
}
._1xwqgg7bu {
  margin-top: 0;
}
._1xwqgg7by {
  margin-bottom: var(--fd6ffp0);
}
._1xwqgg7c2 {
  margin-bottom: var(--fd6ffp1);
}
._1xwqgg7c6 {
  margin-bottom: var(--fd6ffp2);
}
._1xwqgg7ca {
  margin-bottom: var(--fd6ffp3);
}
._1xwqgg7ce {
  margin-bottom: var(--fd6ffp4);
}
._1xwqgg7ci {
  margin-bottom: var(--fd6ffp5);
}
._1xwqgg7cm {
  margin-bottom: var(--fd6ffp6);
}
._1xwqgg7cq {
  margin-bottom: var(--fd6ffp7);
}
._1xwqgg7cu {
  margin-bottom: var(--fd6ffp8);
}
._1xwqgg7cy {
  margin-bottom: 0;
}
._1xwqgg7d2 {
  margin-right: var(--fd6ffp0);
}
._1xwqgg7d6 {
  margin-right: var(--fd6ffp1);
}
._1xwqgg7da {
  margin-right: var(--fd6ffp2);
}
._1xwqgg7de {
  margin-right: var(--fd6ffp3);
}
._1xwqgg7di {
  margin-right: var(--fd6ffp4);
}
._1xwqgg7dm {
  margin-right: var(--fd6ffp5);
}
._1xwqgg7dq {
  margin-right: var(--fd6ffp6);
}
._1xwqgg7du {
  margin-right: var(--fd6ffp7);
}
._1xwqgg7dy {
  margin-right: var(--fd6ffp8);
}
._1xwqgg7e2 {
  margin-right: 0;
}
._1xwqgg7e6 {
  margin-left: var(--fd6ffp0);
}
._1xwqgg7ea {
  margin-left: var(--fd6ffp1);
}
._1xwqgg7ee {
  margin-left: var(--fd6ffp2);
}
._1xwqgg7ei {
  margin-left: var(--fd6ffp3);
}
._1xwqgg7em {
  margin-left: var(--fd6ffp4);
}
._1xwqgg7eq {
  margin-left: var(--fd6ffp5);
}
._1xwqgg7eu {
  margin-left: var(--fd6ffp6);
}
._1xwqgg7ey {
  margin-left: var(--fd6ffp7);
}
._1xwqgg7f2 {
  margin-left: var(--fd6ffp8);
}
._1xwqgg7f6 {
  margin-left: 0;
}
._1xwqgg7fa {
  align-items: flex-start;
}
._1xwqgg7fe {
  align-items: center;
}
._1xwqgg7fi {
  align-items: flex-end;
}
._1xwqgg7fm {
  justify-content: flex-start;
}
._1xwqgg7fq {
  justify-content: center;
}
._1xwqgg7fu {
  justify-content: flex-end;
}
._1xwqgg7fy {
  justify-content: space-between;
}
._1xwqgg7g2 {
  flex-direction: row;
}
._1xwqgg7g6 {
  flex-direction: row-reverse;
}
._1xwqgg7ga {
  flex-direction: column;
}
._1xwqgg7ge {
  flex-direction: column-reverse;
}
._1xwqgg7gi {
  flex-wrap: wrap;
}
._1xwqgg7gm {
  flex-wrap: nowrap;
}
._1xwqgg7gq {
  flex-shrink: 0;
}
._1xwqgg7gu {
  flex-grow: 0;
}
._1xwqgg7gy {
  flex-grow: 1;
}
._1xwqgg7h2 {
  text-align: left;
}
._1xwqgg7h6 {
  text-align: center;
}
._1xwqgg7ha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1xwqgg74v {
    display: none;
  }
  ._1xwqgg74z {
    display: block;
  }
  ._1xwqgg753 {
    display: inline;
  }
  ._1xwqgg757 {
    display: inline-block;
  }
  ._1xwqgg75b {
    display: flex;
  }
  ._1xwqgg75f {
    position: relative;
  }
  ._1xwqgg75j {
    position: absolute;
  }
  ._1xwqgg75n {
    position: fixed;
  }
  ._1xwqgg75r {
    border-radius: 0;
  }
  ._1xwqgg75v {
    border-radius: 9999px;
  }
  ._1xwqgg75z {
    border-radius: var(--fd6ffpb);
  }
  ._1xwqgg763 {
    border-radius: var(--fd6ffpc);
  }
  ._1xwqgg767 {
    border-radius: var(--fd6ffpd);
  }
  ._1xwqgg76b {
    border-radius: var(--fd6ffpe);
  }
  ._1xwqgg76f {
    padding-top: var(--fd6ffp0);
  }
  ._1xwqgg76j {
    padding-top: var(--fd6ffp1);
  }
  ._1xwqgg76n {
    padding-top: var(--fd6ffp2);
  }
  ._1xwqgg76r {
    padding-top: var(--fd6ffp3);
  }
  ._1xwqgg76v {
    padding-top: var(--fd6ffp4);
  }
  ._1xwqgg76z {
    padding-top: var(--fd6ffp5);
  }
  ._1xwqgg773 {
    padding-top: var(--fd6ffp6);
  }
  ._1xwqgg777 {
    padding-top: var(--fd6ffp7);
  }
  ._1xwqgg77b {
    padding-top: var(--fd6ffp8);
  }
  ._1xwqgg77f {
    padding-top: 0;
  }
  ._1xwqgg77j {
    padding-bottom: var(--fd6ffp0);
  }
  ._1xwqgg77n {
    padding-bottom: var(--fd6ffp1);
  }
  ._1xwqgg77r {
    padding-bottom: var(--fd6ffp2);
  }
  ._1xwqgg77v {
    padding-bottom: var(--fd6ffp3);
  }
  ._1xwqgg77z {
    padding-bottom: var(--fd6ffp4);
  }
  ._1xwqgg783 {
    padding-bottom: var(--fd6ffp5);
  }
  ._1xwqgg787 {
    padding-bottom: var(--fd6ffp6);
  }
  ._1xwqgg78b {
    padding-bottom: var(--fd6ffp7);
  }
  ._1xwqgg78f {
    padding-bottom: var(--fd6ffp8);
  }
  ._1xwqgg78j {
    padding-bottom: 0;
  }
  ._1xwqgg78n {
    padding-right: var(--fd6ffp0);
  }
  ._1xwqgg78r {
    padding-right: var(--fd6ffp1);
  }
  ._1xwqgg78v {
    padding-right: var(--fd6ffp2);
  }
  ._1xwqgg78z {
    padding-right: var(--fd6ffp3);
  }
  ._1xwqgg793 {
    padding-right: var(--fd6ffp4);
  }
  ._1xwqgg797 {
    padding-right: var(--fd6ffp5);
  }
  ._1xwqgg79b {
    padding-right: var(--fd6ffp6);
  }
  ._1xwqgg79f {
    padding-right: var(--fd6ffp7);
  }
  ._1xwqgg79j {
    padding-right: var(--fd6ffp8);
  }
  ._1xwqgg79n {
    padding-right: 0;
  }
  ._1xwqgg79r {
    padding-left: var(--fd6ffp0);
  }
  ._1xwqgg79v {
    padding-left: var(--fd6ffp1);
  }
  ._1xwqgg79z {
    padding-left: var(--fd6ffp2);
  }
  ._1xwqgg7a3 {
    padding-left: var(--fd6ffp3);
  }
  ._1xwqgg7a7 {
    padding-left: var(--fd6ffp4);
  }
  ._1xwqgg7ab {
    padding-left: var(--fd6ffp5);
  }
  ._1xwqgg7af {
    padding-left: var(--fd6ffp6);
  }
  ._1xwqgg7aj {
    padding-left: var(--fd6ffp7);
  }
  ._1xwqgg7an {
    padding-left: var(--fd6ffp8);
  }
  ._1xwqgg7ar {
    padding-left: 0;
  }
  ._1xwqgg7av {
    margin-top: var(--fd6ffp0);
  }
  ._1xwqgg7az {
    margin-top: var(--fd6ffp1);
  }
  ._1xwqgg7b3 {
    margin-top: var(--fd6ffp2);
  }
  ._1xwqgg7b7 {
    margin-top: var(--fd6ffp3);
  }
  ._1xwqgg7bb {
    margin-top: var(--fd6ffp4);
  }
  ._1xwqgg7bf {
    margin-top: var(--fd6ffp5);
  }
  ._1xwqgg7bj {
    margin-top: var(--fd6ffp6);
  }
  ._1xwqgg7bn {
    margin-top: var(--fd6ffp7);
  }
  ._1xwqgg7br {
    margin-top: var(--fd6ffp8);
  }
  ._1xwqgg7bv {
    margin-top: 0;
  }
  ._1xwqgg7bz {
    margin-bottom: var(--fd6ffp0);
  }
  ._1xwqgg7c3 {
    margin-bottom: var(--fd6ffp1);
  }
  ._1xwqgg7c7 {
    margin-bottom: var(--fd6ffp2);
  }
  ._1xwqgg7cb {
    margin-bottom: var(--fd6ffp3);
  }
  ._1xwqgg7cf {
    margin-bottom: var(--fd6ffp4);
  }
  ._1xwqgg7cj {
    margin-bottom: var(--fd6ffp5);
  }
  ._1xwqgg7cn {
    margin-bottom: var(--fd6ffp6);
  }
  ._1xwqgg7cr {
    margin-bottom: var(--fd6ffp7);
  }
  ._1xwqgg7cv {
    margin-bottom: var(--fd6ffp8);
  }
  ._1xwqgg7cz {
    margin-bottom: 0;
  }
  ._1xwqgg7d3 {
    margin-right: var(--fd6ffp0);
  }
  ._1xwqgg7d7 {
    margin-right: var(--fd6ffp1);
  }
  ._1xwqgg7db {
    margin-right: var(--fd6ffp2);
  }
  ._1xwqgg7df {
    margin-right: var(--fd6ffp3);
  }
  ._1xwqgg7dj {
    margin-right: var(--fd6ffp4);
  }
  ._1xwqgg7dn {
    margin-right: var(--fd6ffp5);
  }
  ._1xwqgg7dr {
    margin-right: var(--fd6ffp6);
  }
  ._1xwqgg7dv {
    margin-right: var(--fd6ffp7);
  }
  ._1xwqgg7dz {
    margin-right: var(--fd6ffp8);
  }
  ._1xwqgg7e3 {
    margin-right: 0;
  }
  ._1xwqgg7e7 {
    margin-left: var(--fd6ffp0);
  }
  ._1xwqgg7eb {
    margin-left: var(--fd6ffp1);
  }
  ._1xwqgg7ef {
    margin-left: var(--fd6ffp2);
  }
  ._1xwqgg7ej {
    margin-left: var(--fd6ffp3);
  }
  ._1xwqgg7en {
    margin-left: var(--fd6ffp4);
  }
  ._1xwqgg7er {
    margin-left: var(--fd6ffp5);
  }
  ._1xwqgg7ev {
    margin-left: var(--fd6ffp6);
  }
  ._1xwqgg7ez {
    margin-left: var(--fd6ffp7);
  }
  ._1xwqgg7f3 {
    margin-left: var(--fd6ffp8);
  }
  ._1xwqgg7f7 {
    margin-left: 0;
  }
  ._1xwqgg7fb {
    align-items: flex-start;
  }
  ._1xwqgg7ff {
    align-items: center;
  }
  ._1xwqgg7fj {
    align-items: flex-end;
  }
  ._1xwqgg7fn {
    justify-content: flex-start;
  }
  ._1xwqgg7fr {
    justify-content: center;
  }
  ._1xwqgg7fv {
    justify-content: flex-end;
  }
  ._1xwqgg7fz {
    justify-content: space-between;
  }
  ._1xwqgg7g3 {
    flex-direction: row;
  }
  ._1xwqgg7g7 {
    flex-direction: row-reverse;
  }
  ._1xwqgg7gb {
    flex-direction: column;
  }
  ._1xwqgg7gf {
    flex-direction: column-reverse;
  }
  ._1xwqgg7gj {
    flex-wrap: wrap;
  }
  ._1xwqgg7gn {
    flex-wrap: nowrap;
  }
  ._1xwqgg7gr {
    flex-shrink: 0;
  }
  ._1xwqgg7gv {
    flex-grow: 0;
  }
  ._1xwqgg7gz {
    flex-grow: 1;
  }
  ._1xwqgg7h3 {
    text-align: left;
  }
  ._1xwqgg7h7 {
    text-align: center;
  }
  ._1xwqgg7hb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1xwqgg74w {
    display: none;
  }
  ._1xwqgg750 {
    display: block;
  }
  ._1xwqgg754 {
    display: inline;
  }
  ._1xwqgg758 {
    display: inline-block;
  }
  ._1xwqgg75c {
    display: flex;
  }
  ._1xwqgg75g {
    position: relative;
  }
  ._1xwqgg75k {
    position: absolute;
  }
  ._1xwqgg75o {
    position: fixed;
  }
  ._1xwqgg75s {
    border-radius: 0;
  }
  ._1xwqgg75w {
    border-radius: 9999px;
  }
  ._1xwqgg760 {
    border-radius: var(--fd6ffpb);
  }
  ._1xwqgg764 {
    border-radius: var(--fd6ffpc);
  }
  ._1xwqgg768 {
    border-radius: var(--fd6ffpd);
  }
  ._1xwqgg76c {
    border-radius: var(--fd6ffpe);
  }
  ._1xwqgg76g {
    padding-top: var(--fd6ffp0);
  }
  ._1xwqgg76k {
    padding-top: var(--fd6ffp1);
  }
  ._1xwqgg76o {
    padding-top: var(--fd6ffp2);
  }
  ._1xwqgg76s {
    padding-top: var(--fd6ffp3);
  }
  ._1xwqgg76w {
    padding-top: var(--fd6ffp4);
  }
  ._1xwqgg770 {
    padding-top: var(--fd6ffp5);
  }
  ._1xwqgg774 {
    padding-top: var(--fd6ffp6);
  }
  ._1xwqgg778 {
    padding-top: var(--fd6ffp7);
  }
  ._1xwqgg77c {
    padding-top: var(--fd6ffp8);
  }
  ._1xwqgg77g {
    padding-top: 0;
  }
  ._1xwqgg77k {
    padding-bottom: var(--fd6ffp0);
  }
  ._1xwqgg77o {
    padding-bottom: var(--fd6ffp1);
  }
  ._1xwqgg77s {
    padding-bottom: var(--fd6ffp2);
  }
  ._1xwqgg77w {
    padding-bottom: var(--fd6ffp3);
  }
  ._1xwqgg780 {
    padding-bottom: var(--fd6ffp4);
  }
  ._1xwqgg784 {
    padding-bottom: var(--fd6ffp5);
  }
  ._1xwqgg788 {
    padding-bottom: var(--fd6ffp6);
  }
  ._1xwqgg78c {
    padding-bottom: var(--fd6ffp7);
  }
  ._1xwqgg78g {
    padding-bottom: var(--fd6ffp8);
  }
  ._1xwqgg78k {
    padding-bottom: 0;
  }
  ._1xwqgg78o {
    padding-right: var(--fd6ffp0);
  }
  ._1xwqgg78s {
    padding-right: var(--fd6ffp1);
  }
  ._1xwqgg78w {
    padding-right: var(--fd6ffp2);
  }
  ._1xwqgg790 {
    padding-right: var(--fd6ffp3);
  }
  ._1xwqgg794 {
    padding-right: var(--fd6ffp4);
  }
  ._1xwqgg798 {
    padding-right: var(--fd6ffp5);
  }
  ._1xwqgg79c {
    padding-right: var(--fd6ffp6);
  }
  ._1xwqgg79g {
    padding-right: var(--fd6ffp7);
  }
  ._1xwqgg79k {
    padding-right: var(--fd6ffp8);
  }
  ._1xwqgg79o {
    padding-right: 0;
  }
  ._1xwqgg79s {
    padding-left: var(--fd6ffp0);
  }
  ._1xwqgg79w {
    padding-left: var(--fd6ffp1);
  }
  ._1xwqgg7a0 {
    padding-left: var(--fd6ffp2);
  }
  ._1xwqgg7a4 {
    padding-left: var(--fd6ffp3);
  }
  ._1xwqgg7a8 {
    padding-left: var(--fd6ffp4);
  }
  ._1xwqgg7ac {
    padding-left: var(--fd6ffp5);
  }
  ._1xwqgg7ag {
    padding-left: var(--fd6ffp6);
  }
  ._1xwqgg7ak {
    padding-left: var(--fd6ffp7);
  }
  ._1xwqgg7ao {
    padding-left: var(--fd6ffp8);
  }
  ._1xwqgg7as {
    padding-left: 0;
  }
  ._1xwqgg7aw {
    margin-top: var(--fd6ffp0);
  }
  ._1xwqgg7b0 {
    margin-top: var(--fd6ffp1);
  }
  ._1xwqgg7b4 {
    margin-top: var(--fd6ffp2);
  }
  ._1xwqgg7b8 {
    margin-top: var(--fd6ffp3);
  }
  ._1xwqgg7bc {
    margin-top: var(--fd6ffp4);
  }
  ._1xwqgg7bg {
    margin-top: var(--fd6ffp5);
  }
  ._1xwqgg7bk {
    margin-top: var(--fd6ffp6);
  }
  ._1xwqgg7bo {
    margin-top: var(--fd6ffp7);
  }
  ._1xwqgg7bs {
    margin-top: var(--fd6ffp8);
  }
  ._1xwqgg7bw {
    margin-top: 0;
  }
  ._1xwqgg7c0 {
    margin-bottom: var(--fd6ffp0);
  }
  ._1xwqgg7c4 {
    margin-bottom: var(--fd6ffp1);
  }
  ._1xwqgg7c8 {
    margin-bottom: var(--fd6ffp2);
  }
  ._1xwqgg7cc {
    margin-bottom: var(--fd6ffp3);
  }
  ._1xwqgg7cg {
    margin-bottom: var(--fd6ffp4);
  }
  ._1xwqgg7ck {
    margin-bottom: var(--fd6ffp5);
  }
  ._1xwqgg7co {
    margin-bottom: var(--fd6ffp6);
  }
  ._1xwqgg7cs {
    margin-bottom: var(--fd6ffp7);
  }
  ._1xwqgg7cw {
    margin-bottom: var(--fd6ffp8);
  }
  ._1xwqgg7d0 {
    margin-bottom: 0;
  }
  ._1xwqgg7d4 {
    margin-right: var(--fd6ffp0);
  }
  ._1xwqgg7d8 {
    margin-right: var(--fd6ffp1);
  }
  ._1xwqgg7dc {
    margin-right: var(--fd6ffp2);
  }
  ._1xwqgg7dg {
    margin-right: var(--fd6ffp3);
  }
  ._1xwqgg7dk {
    margin-right: var(--fd6ffp4);
  }
  ._1xwqgg7do {
    margin-right: var(--fd6ffp5);
  }
  ._1xwqgg7ds {
    margin-right: var(--fd6ffp6);
  }
  ._1xwqgg7dw {
    margin-right: var(--fd6ffp7);
  }
  ._1xwqgg7e0 {
    margin-right: var(--fd6ffp8);
  }
  ._1xwqgg7e4 {
    margin-right: 0;
  }
  ._1xwqgg7e8 {
    margin-left: var(--fd6ffp0);
  }
  ._1xwqgg7ec {
    margin-left: var(--fd6ffp1);
  }
  ._1xwqgg7eg {
    margin-left: var(--fd6ffp2);
  }
  ._1xwqgg7ek {
    margin-left: var(--fd6ffp3);
  }
  ._1xwqgg7eo {
    margin-left: var(--fd6ffp4);
  }
  ._1xwqgg7es {
    margin-left: var(--fd6ffp5);
  }
  ._1xwqgg7ew {
    margin-left: var(--fd6ffp6);
  }
  ._1xwqgg7f0 {
    margin-left: var(--fd6ffp7);
  }
  ._1xwqgg7f4 {
    margin-left: var(--fd6ffp8);
  }
  ._1xwqgg7f8 {
    margin-left: 0;
  }
  ._1xwqgg7fc {
    align-items: flex-start;
  }
  ._1xwqgg7fg {
    align-items: center;
  }
  ._1xwqgg7fk {
    align-items: flex-end;
  }
  ._1xwqgg7fo {
    justify-content: flex-start;
  }
  ._1xwqgg7fs {
    justify-content: center;
  }
  ._1xwqgg7fw {
    justify-content: flex-end;
  }
  ._1xwqgg7g0 {
    justify-content: space-between;
  }
  ._1xwqgg7g4 {
    flex-direction: row;
  }
  ._1xwqgg7g8 {
    flex-direction: row-reverse;
  }
  ._1xwqgg7gc {
    flex-direction: column;
  }
  ._1xwqgg7gg {
    flex-direction: column-reverse;
  }
  ._1xwqgg7gk {
    flex-wrap: wrap;
  }
  ._1xwqgg7go {
    flex-wrap: nowrap;
  }
  ._1xwqgg7gs {
    flex-shrink: 0;
  }
  ._1xwqgg7gw {
    flex-grow: 0;
  }
  ._1xwqgg7h0 {
    flex-grow: 1;
  }
  ._1xwqgg7h4 {
    text-align: left;
  }
  ._1xwqgg7h8 {
    text-align: center;
  }
  ._1xwqgg7hc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1xwqgg74x {
    display: none;
  }
  ._1xwqgg751 {
    display: block;
  }
  ._1xwqgg755 {
    display: inline;
  }
  ._1xwqgg759 {
    display: inline-block;
  }
  ._1xwqgg75d {
    display: flex;
  }
  ._1xwqgg75h {
    position: relative;
  }
  ._1xwqgg75l {
    position: absolute;
  }
  ._1xwqgg75p {
    position: fixed;
  }
  ._1xwqgg75t {
    border-radius: 0;
  }
  ._1xwqgg75x {
    border-radius: 9999px;
  }
  ._1xwqgg761 {
    border-radius: var(--fd6ffpb);
  }
  ._1xwqgg765 {
    border-radius: var(--fd6ffpc);
  }
  ._1xwqgg769 {
    border-radius: var(--fd6ffpd);
  }
  ._1xwqgg76d {
    border-radius: var(--fd6ffpe);
  }
  ._1xwqgg76h {
    padding-top: var(--fd6ffp0);
  }
  ._1xwqgg76l {
    padding-top: var(--fd6ffp1);
  }
  ._1xwqgg76p {
    padding-top: var(--fd6ffp2);
  }
  ._1xwqgg76t {
    padding-top: var(--fd6ffp3);
  }
  ._1xwqgg76x {
    padding-top: var(--fd6ffp4);
  }
  ._1xwqgg771 {
    padding-top: var(--fd6ffp5);
  }
  ._1xwqgg775 {
    padding-top: var(--fd6ffp6);
  }
  ._1xwqgg779 {
    padding-top: var(--fd6ffp7);
  }
  ._1xwqgg77d {
    padding-top: var(--fd6ffp8);
  }
  ._1xwqgg77h {
    padding-top: 0;
  }
  ._1xwqgg77l {
    padding-bottom: var(--fd6ffp0);
  }
  ._1xwqgg77p {
    padding-bottom: var(--fd6ffp1);
  }
  ._1xwqgg77t {
    padding-bottom: var(--fd6ffp2);
  }
  ._1xwqgg77x {
    padding-bottom: var(--fd6ffp3);
  }
  ._1xwqgg781 {
    padding-bottom: var(--fd6ffp4);
  }
  ._1xwqgg785 {
    padding-bottom: var(--fd6ffp5);
  }
  ._1xwqgg789 {
    padding-bottom: var(--fd6ffp6);
  }
  ._1xwqgg78d {
    padding-bottom: var(--fd6ffp7);
  }
  ._1xwqgg78h {
    padding-bottom: var(--fd6ffp8);
  }
  ._1xwqgg78l {
    padding-bottom: 0;
  }
  ._1xwqgg78p {
    padding-right: var(--fd6ffp0);
  }
  ._1xwqgg78t {
    padding-right: var(--fd6ffp1);
  }
  ._1xwqgg78x {
    padding-right: var(--fd6ffp2);
  }
  ._1xwqgg791 {
    padding-right: var(--fd6ffp3);
  }
  ._1xwqgg795 {
    padding-right: var(--fd6ffp4);
  }
  ._1xwqgg799 {
    padding-right: var(--fd6ffp5);
  }
  ._1xwqgg79d {
    padding-right: var(--fd6ffp6);
  }
  ._1xwqgg79h {
    padding-right: var(--fd6ffp7);
  }
  ._1xwqgg79l {
    padding-right: var(--fd6ffp8);
  }
  ._1xwqgg79p {
    padding-right: 0;
  }
  ._1xwqgg79t {
    padding-left: var(--fd6ffp0);
  }
  ._1xwqgg79x {
    padding-left: var(--fd6ffp1);
  }
  ._1xwqgg7a1 {
    padding-left: var(--fd6ffp2);
  }
  ._1xwqgg7a5 {
    padding-left: var(--fd6ffp3);
  }
  ._1xwqgg7a9 {
    padding-left: var(--fd6ffp4);
  }
  ._1xwqgg7ad {
    padding-left: var(--fd6ffp5);
  }
  ._1xwqgg7ah {
    padding-left: var(--fd6ffp6);
  }
  ._1xwqgg7al {
    padding-left: var(--fd6ffp7);
  }
  ._1xwqgg7ap {
    padding-left: var(--fd6ffp8);
  }
  ._1xwqgg7at {
    padding-left: 0;
  }
  ._1xwqgg7ax {
    margin-top: var(--fd6ffp0);
  }
  ._1xwqgg7b1 {
    margin-top: var(--fd6ffp1);
  }
  ._1xwqgg7b5 {
    margin-top: var(--fd6ffp2);
  }
  ._1xwqgg7b9 {
    margin-top: var(--fd6ffp3);
  }
  ._1xwqgg7bd {
    margin-top: var(--fd6ffp4);
  }
  ._1xwqgg7bh {
    margin-top: var(--fd6ffp5);
  }
  ._1xwqgg7bl {
    margin-top: var(--fd6ffp6);
  }
  ._1xwqgg7bp {
    margin-top: var(--fd6ffp7);
  }
  ._1xwqgg7bt {
    margin-top: var(--fd6ffp8);
  }
  ._1xwqgg7bx {
    margin-top: 0;
  }
  ._1xwqgg7c1 {
    margin-bottom: var(--fd6ffp0);
  }
  ._1xwqgg7c5 {
    margin-bottom: var(--fd6ffp1);
  }
  ._1xwqgg7c9 {
    margin-bottom: var(--fd6ffp2);
  }
  ._1xwqgg7cd {
    margin-bottom: var(--fd6ffp3);
  }
  ._1xwqgg7ch {
    margin-bottom: var(--fd6ffp4);
  }
  ._1xwqgg7cl {
    margin-bottom: var(--fd6ffp5);
  }
  ._1xwqgg7cp {
    margin-bottom: var(--fd6ffp6);
  }
  ._1xwqgg7ct {
    margin-bottom: var(--fd6ffp7);
  }
  ._1xwqgg7cx {
    margin-bottom: var(--fd6ffp8);
  }
  ._1xwqgg7d1 {
    margin-bottom: 0;
  }
  ._1xwqgg7d5 {
    margin-right: var(--fd6ffp0);
  }
  ._1xwqgg7d9 {
    margin-right: var(--fd6ffp1);
  }
  ._1xwqgg7dd {
    margin-right: var(--fd6ffp2);
  }
  ._1xwqgg7dh {
    margin-right: var(--fd6ffp3);
  }
  ._1xwqgg7dl {
    margin-right: var(--fd6ffp4);
  }
  ._1xwqgg7dp {
    margin-right: var(--fd6ffp5);
  }
  ._1xwqgg7dt {
    margin-right: var(--fd6ffp6);
  }
  ._1xwqgg7dx {
    margin-right: var(--fd6ffp7);
  }
  ._1xwqgg7e1 {
    margin-right: var(--fd6ffp8);
  }
  ._1xwqgg7e5 {
    margin-right: 0;
  }
  ._1xwqgg7e9 {
    margin-left: var(--fd6ffp0);
  }
  ._1xwqgg7ed {
    margin-left: var(--fd6ffp1);
  }
  ._1xwqgg7eh {
    margin-left: var(--fd6ffp2);
  }
  ._1xwqgg7el {
    margin-left: var(--fd6ffp3);
  }
  ._1xwqgg7ep {
    margin-left: var(--fd6ffp4);
  }
  ._1xwqgg7et {
    margin-left: var(--fd6ffp5);
  }
  ._1xwqgg7ex {
    margin-left: var(--fd6ffp6);
  }
  ._1xwqgg7f1 {
    margin-left: var(--fd6ffp7);
  }
  ._1xwqgg7f5 {
    margin-left: var(--fd6ffp8);
  }
  ._1xwqgg7f9 {
    margin-left: 0;
  }
  ._1xwqgg7fd {
    align-items: flex-start;
  }
  ._1xwqgg7fh {
    align-items: center;
  }
  ._1xwqgg7fl {
    align-items: flex-end;
  }
  ._1xwqgg7fp {
    justify-content: flex-start;
  }
  ._1xwqgg7ft {
    justify-content: center;
  }
  ._1xwqgg7fx {
    justify-content: flex-end;
  }
  ._1xwqgg7g1 {
    justify-content: space-between;
  }
  ._1xwqgg7g5 {
    flex-direction: row;
  }
  ._1xwqgg7g9 {
    flex-direction: row-reverse;
  }
  ._1xwqgg7gd {
    flex-direction: column;
  }
  ._1xwqgg7gh {
    flex-direction: column-reverse;
  }
  ._1xwqgg7gl {
    flex-wrap: wrap;
  }
  ._1xwqgg7gp {
    flex-wrap: nowrap;
  }
  ._1xwqgg7gt {
    flex-shrink: 0;
  }
  ._1xwqgg7gx {
    flex-grow: 0;
  }
  ._1xwqgg7h1 {
    flex-grow: 1;
  }
  ._1xwqgg7h5 {
    text-align: left;
  }
  ._1xwqgg7h9 {
    text-align: center;
  }
  ._1xwqgg7hd {
    text-align: right;
  }
}
.uo8yjc4 {
  font-size: var(--uo8yjc0);
  line-height: var(--uo8yjc1);
}
.uo8yjc4:before {
  content: "";
  display: table;
  margin-bottom: var(--uo8yjc2);
}
.uo8yjc4:after {
  content: "";
  display: table;
  margin-top: var(--uo8yjc3);
}
._1fan4b80 {
  font-family: var(--fd6ffp2w);
}
._1fan4b81 {
  font-weight: var(--fd6ffp46);
}
._1fan4b82 {
  font-weight: var(--fd6ffp47);
}
._1fan4b83 {
  font-weight: var(--fd6ffp48);
}
._1fan4b84 {
  --uo8yjc0: var(--fd6ffp32);
  --uo8yjc1: var(--fd6ffp33);
  --uo8yjc2: var(--fd6ffp35);
  --uo8yjc3: var(--fd6ffp36);
}
._1fan4b87 {
  --uo8yjc0: var(--fd6ffp3c);
  --uo8yjc1: var(--fd6ffp3d);
  --uo8yjc2: var(--fd6ffp3f);
  --uo8yjc3: var(--fd6ffp3g);
}
._1fan4b8a {
  --uo8yjc0: var(--fd6ffp3m);
  --uo8yjc1: var(--fd6ffp3n);
  --uo8yjc2: var(--fd6ffp3p);
  --uo8yjc3: var(--fd6ffp3q);
}
._1fan4b8d {
  --uo8yjc0: var(--fd6ffp3w);
  --uo8yjc1: var(--fd6ffp3x);
  --uo8yjc2: var(--fd6ffp3z);
  --uo8yjc3: var(--fd6ffp40);
}
._1fan4b8g {
  font-size: var(--fd6ffp32);
  line-height: var(--fd6ffp33);
}
._1fan4b8h {
  font-size: var(--fd6ffp3c);
  line-height: var(--fd6ffp3d);
}
._1fan4b8i {
  font-size: var(--fd6ffp3m);
  line-height: var(--fd6ffp3n);
}
._1fan4b8j {
  font-size: var(--fd6ffp3w);
  line-height: var(--fd6ffp3x);
}
._1fan4b8k {
  font-weight: var(--fd6ffp5d);
}
._1fan4b8l {
  font-weight: var(--fd6ffp5e);
}
._1fan4b8m {
  --uo8yjc0: var(--fd6ffp49);
  --uo8yjc1: var(--fd6ffp4a);
  --uo8yjc2: var(--fd6ffp4c);
  --uo8yjc3: var(--fd6ffp4d);
}
._1fan4b8p {
  --uo8yjc0: var(--fd6ffp4j);
  --uo8yjc1: var(--fd6ffp4k);
  --uo8yjc2: var(--fd6ffp4m);
  --uo8yjc3: var(--fd6ffp4n);
}
._1fan4b8s {
  --uo8yjc0: var(--fd6ffp4t);
  --uo8yjc1: var(--fd6ffp4u);
  --uo8yjc2: var(--fd6ffp4w);
  --uo8yjc3: var(--fd6ffp4x);
}
._1fan4b8v {
  --uo8yjc0: var(--fd6ffp53);
  --uo8yjc1: var(--fd6ffp54);
  --uo8yjc2: var(--fd6ffp56);
  --uo8yjc3: var(--fd6ffp57);
}
html:not(._1xwqgg7z) ._1fan4b818 {
  --_1fan4b8y: var(--fd6ffp19);
  --_1fan4b8z: var(--fd6ffp17);
  --_1fan4b810: var(--fd6ffp1d);
  --_1fan4b811: var(--fd6ffp1o);
  --_1fan4b812: var(--fd6ffp1m);
  --_1fan4b813: var(--fd6ffp15);
  --_1fan4b814: var(--fd6ffp1b);
  --_1fan4b815: var(--fd6ffp1k);
  --_1fan4b816: var(--fd6ffp1r);
  --_1fan4b817: var(--fd6ffp1f);
}
html:not(._1xwqgg7z) ._1fan4b819 {
  --_1fan4b8y: var(--fd6ffp1a);
  --_1fan4b8z: var(--fd6ffp18);
  --_1fan4b810: var(--fd6ffp1e);
  --_1fan4b811: var(--fd6ffp1p);
  --_1fan4b812: var(--fd6ffp1n);
  --_1fan4b813: var(--fd6ffp16);
  --_1fan4b814: var(--fd6ffp1c);
  --_1fan4b815: var(--fd6ffp1l);
  --_1fan4b816: var(--fd6ffp1s);
  --_1fan4b817: var(--fd6ffp1h);
}
html._1xwqgg7z ._1fan4b81a {
  --_1fan4b8y: var(--fd6ffp19);
  --_1fan4b8z: var(--fd6ffp17);
  --_1fan4b810: var(--fd6ffp1d);
  --_1fan4b811: var(--fd6ffp1o);
  --_1fan4b812: var(--fd6ffp1m);
  --_1fan4b813: var(--fd6ffp15);
  --_1fan4b814: var(--fd6ffp1b);
  --_1fan4b815: var(--fd6ffp1k);
  --_1fan4b816: var(--fd6ffp1r);
  --_1fan4b817: var(--fd6ffp1f);
}
html._1xwqgg7z ._1fan4b81b {
  --_1fan4b8y: var(--fd6ffp1a);
  --_1fan4b8z: var(--fd6ffp18);
  --_1fan4b810: var(--fd6ffp1e);
  --_1fan4b811: var(--fd6ffp1p);
  --_1fan4b812: var(--fd6ffp1n);
  --_1fan4b813: var(--fd6ffp16);
  --_1fan4b814: var(--fd6ffp1c);
  --_1fan4b815: var(--fd6ffp1l);
  --_1fan4b816: var(--fd6ffp1s);
  --_1fan4b817: var(--fd6ffp1h);
}
html:not(._1xwqgg7z) ._1fan4b81c,
html:not(._1xwqgg7z) ._1fan4b81d,
html:not(._1xwqgg7z) ._1fan4b81e,
html:not(._1xwqgg7z) ._1fan4b81f {
  --_1fan4b815: var(--_1fan4b8y);
}
html:not(._1xwqgg7z) ._1fan4b81g,
html:not(._1xwqgg7z) ._1fan4b81h {
  --_1fan4b815: var(--_1fan4b8z);
}
html:not(._1xwqgg7z) ._1fan4b81i {
  --_1fan4b815: var(--_1fan4b812);
}
html:not(._1xwqgg7z) ._1fan4b81j {
  --_1fan4b815: var(--_1fan4b810);
}
html:not(._1xwqgg7z) ._1fan4b81k {
  --_1fan4b815: var(--_1fan4b811);
}
html._1xwqgg7z ._1fan4b81l,
html._1xwqgg7z ._1fan4b81m,
html._1xwqgg7z ._1fan4b81n,
html._1xwqgg7z ._1fan4b81o {
  --_1fan4b815: var(--_1fan4b8y);
}
html._1xwqgg7z ._1fan4b81p,
html._1xwqgg7z ._1fan4b81q {
  --_1fan4b815: var(--_1fan4b8z);
}
html._1xwqgg7z ._1fan4b81r {
  --_1fan4b815: var(--_1fan4b812);
}
html._1xwqgg7z ._1fan4b81s {
  --_1fan4b815: var(--_1fan4b810);
}
html._1xwqgg7z ._1fan4b81t {
  --_1fan4b815: var(--_1fan4b811);
}
._1fan4b81u {
  color: var(--_1fan4b8y);
}
._1fan4b81v {
  color: var(--_1fan4b8z);
}
._1fan4b81w {
  color: var(--_1fan4b810);
}
._1fan4b81x {
  color: var(--_1fan4b811);
}
._1fan4b81y {
  color: var(--_1fan4b812);
}
._1fan4b81z {
  color: var(--_1fan4b813);
}
._1fan4b820 {
  color: var(--_1fan4b814);
}
._1fan4b821 {
  color: var(--_1fan4b815);
}
._1fan4b822 {
  color: var(--_1fan4b816);
}
._1fan4b823 {
  color: var(--_1fan4b817);
}
._1fan4b824 {
  padding-bottom: calc((var(--fd6ffp9) - var(--fd6ffp33)) / 2);
  padding-top: calc((var(--fd6ffp9) - var(--fd6ffp33)) / 2);
}
._1fan4b825 {
  padding-bottom: calc((var(--fd6ffp9) - var(--fd6ffp3d)) / 2);
  padding-top: calc((var(--fd6ffp9) - var(--fd6ffp3d)) / 2);
}
._1fan4b826 {
  padding-bottom: calc((var(--fd6ffp9) - var(--fd6ffp3n)) / 2);
  padding-top: calc((var(--fd6ffp9) - var(--fd6ffp3n)) / 2);
}
._1fan4b827 {
  padding-bottom: calc((var(--fd6ffp9) - var(--fd6ffp3x)) / 2);
  padding-top: calc((var(--fd6ffp9) - var(--fd6ffp3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1fan4b84 {
    --uo8yjc0: var(--fd6ffp37);
    --uo8yjc1: var(--fd6ffp38);
    --uo8yjc2: var(--fd6ffp3a);
    --uo8yjc3: var(--fd6ffp3b);
  }
  ._1fan4b87 {
    --uo8yjc0: var(--fd6ffp3h);
    --uo8yjc1: var(--fd6ffp3i);
    --uo8yjc2: var(--fd6ffp3k);
    --uo8yjc3: var(--fd6ffp3l);
  }
  ._1fan4b8a {
    --uo8yjc0: var(--fd6ffp3r);
    --uo8yjc1: var(--fd6ffp3s);
    --uo8yjc2: var(--fd6ffp3u);
    --uo8yjc3: var(--fd6ffp3v);
  }
  ._1fan4b8d {
    --uo8yjc0: var(--fd6ffp41);
    --uo8yjc1: var(--fd6ffp42);
    --uo8yjc2: var(--fd6ffp44);
    --uo8yjc3: var(--fd6ffp45);
  }
  ._1fan4b8g {
    font-size: var(--fd6ffp37);
    line-height: var(--fd6ffp38);
  }
  ._1fan4b8h {
    font-size: var(--fd6ffp3h);
    line-height: var(--fd6ffp3i);
  }
  ._1fan4b8i {
    font-size: var(--fd6ffp3r);
    line-height: var(--fd6ffp3s);
  }
  ._1fan4b8j {
    font-size: var(--fd6ffp41);
    line-height: var(--fd6ffp42);
  }
  ._1fan4b8m {
    --uo8yjc0: var(--fd6ffp4e);
    --uo8yjc1: var(--fd6ffp4f);
    --uo8yjc2: var(--fd6ffp4h);
    --uo8yjc3: var(--fd6ffp4i);
  }
  ._1fan4b8p {
    --uo8yjc0: var(--fd6ffp4o);
    --uo8yjc1: var(--fd6ffp4p);
    --uo8yjc2: var(--fd6ffp4r);
    --uo8yjc3: var(--fd6ffp4s);
  }
  ._1fan4b8s {
    --uo8yjc0: var(--fd6ffp4y);
    --uo8yjc1: var(--fd6ffp4z);
    --uo8yjc2: var(--fd6ffp51);
    --uo8yjc3: var(--fd6ffp52);
  }
  ._1fan4b8v {
    --uo8yjc0: var(--fd6ffp58);
    --uo8yjc1: var(--fd6ffp59);
    --uo8yjc2: var(--fd6ffp5b);
    --uo8yjc3: var(--fd6ffp5c);
  }
  ._1fan4b824 {
    padding-bottom: calc((var(--fd6ffp9) - var(--fd6ffp38)) / 2);
    padding-top: calc((var(--fd6ffp9) - var(--fd6ffp38)) / 2);
  }
  ._1fan4b825 {
    padding-bottom: calc((var(--fd6ffp9) - var(--fd6ffp3i)) / 2);
    padding-top: calc((var(--fd6ffp9) - var(--fd6ffp3i)) / 2);
  }
  ._1fan4b826 {
    padding-bottom: calc((var(--fd6ffp9) - var(--fd6ffp3s)) / 2);
    padding-top: calc((var(--fd6ffp9) - var(--fd6ffp3s)) / 2);
  }
  ._1fan4b827 {
    padding-bottom: calc((var(--fd6ffp9) - var(--fd6ffp42)) / 2);
    padding-top: calc((var(--fd6ffp9) - var(--fd6ffp42)) / 2);
  }
}
._1piqufd0 {
  --fd6ffp0: 24px;
  --fd6ffp1: 4px;
  --fd6ffp2: 8px;
  --fd6ffp3: 12px;
  --fd6ffp4: 20px;
  --fd6ffp5: 32px;
  --fd6ffp6: 48px;
  --fd6ffp7: 96px;
  --fd6ffp8: 120px;
  --fd6ffp9: 44px;
  --fd6ffpa: 4px;
  --fd6ffpb: 2px;
  --fd6ffpc: 4px;
  --fd6ffpd: 6px;
  --fd6ffpe: 10px;
  --fd6ffpf: #e60278;
  --fd6ffpg: #f8b1dc;
  --fd6ffph: #fdc221;
  --fd6ffpi: #fee384;
  --fd6ffpj: #b91e1e;
  --fd6ffpk: #fb999a;
  --fd6ffpl: #838fa5;
  --fd6ffpm: rgba(159, 176, 245, 0.7);
  --fd6ffpn: #4964e9;
  --fd6ffpo: #9fb0f5;
  --fd6ffpp: #1d559d;
  --fd6ffpq: #98c9f1;
  --fd6ffpr: #2e3849;
  --fd6ffpt: #d2d7df;
  --fd6ffps: #fff;
  --fd6ffpu: #12784f;
  --fd6ffpv: #8bdec5;
  --fd6ffpw: #512eaa;
  --fd6ffpx: #c6acf5;
  --fd6ffpy: 1px;
  --fd6ffpz: 2px;
  --fd6ffp10: 3px;
  --fd6ffp11: 400px;
  --fd6ffp12: 660px;
  --fd6ffp13: 940px;
  --fd6ffp14: 1280px;
  --fd6ffp15: #e60278;
  --fd6ffp16: #f8b1dc;
  --fd6ffp17: #723d02;
  --fd6ffp18: #fee384;
  --fd6ffp19: #b91e1e;
  --fd6ffp1a: #fb999a;
  --fd6ffp1b: #4964e9;
  --fd6ffp1c: #9fb0f5;
  --fd6ffp1d: #1d559d;
  --fd6ffp1e: #98c9f1;
  --fd6ffp1f: #4964e9;
  --fd6ffp1h: #9fb0f5;
  --fd6ffp1g: #4964e9;
  --fd6ffp1i: #512eaa;
  --fd6ffp1j: #c6acf5;
  --fd6ffp1k: #2e3849;
  --fd6ffp1l: #fff;
  --fd6ffp1m: #12784f;
  --fd6ffp1n: #8bdec5;
  --fd6ffp1o: #512eaa;
  --fd6ffp1p: #c6acf5;
  --fd6ffp1q: #f57c00;
  --fd6ffp1r: #5a6881;
  --fd6ffp1s: hsla(0, 0%, 100%, 0.65);
  --fd6ffp1t: #f7f8fb;
  --fd6ffp1u: #0e131b;
  --fd6ffp1v: #0d3880;
  --fd6ffp1w: #e60278;
  --fd6ffp1x: #cd026b;
  --fd6ffp1y: #fd0585;
  --fd6ffp1z: #feeffa;
  --fd6ffp20: #fdd7f3;
  --fd6ffp21: #fde3f6;
  --fd6ffp22: #fdc221;
  --fd6ffp23: #fef8de;
  --fd6ffp24: #b91e1e;
  --fd6ffp25: #a31a1a;
  --fd6ffp26: #db1616;
  --fd6ffp27: #ffe3e2;
  --fd6ffp28: #fef3f3;
  --fd6ffp29: #fcdbdb;
  --fd6ffp2a: #fde7e7;
  --fd6ffp2b: #4964e9;
  --fd6ffp2c: #3251e6;
  --fd6ffp2d: #5975ff;
  --fd6ffp2e: #f4f6fe;
  --fd6ffp2f: #dde3fc;
  --fd6ffp2g: #e8ecfd;
  --fd6ffp2h: #1d559d;
  --fd6ffp2i: #e3f2fb;
  --fd6ffp2j: #2e3849;
  --fd6ffp2k: #242c39;
  --fd6ffp2l: #384459;
  --fd6ffp2m: #eaecf1;
  --fd6ffp2n: #f7f8fb;
  --fd6ffp2o: #e6e9f3;
  --fd6ffp2p: #eff1f7;
  --fd6ffp2q: #12784f;
  --fd6ffp2r: #e2f7f1;
  --fd6ffp2s: #512eaa;
  --fd6ffp2t: #f1e8fd;
  --fd6ffp2u: #fff;
  --fd6ffp2v: #1c2330;
  --fd6ffp2w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --fd6ffp2x: 1456;
  --fd6ffp2y: 1900;
  --fd6ffp2z: -500;
  --fd6ffp30: 0;
  --fd6ffp31: 2048;
  --fd6ffp32: 12px;
  --fd6ffp33: 20px;
  --fd6ffp34: 8.5313px;
  --fd6ffp35: -0.4642em;
  --fd6ffp36: -0.4915em;
  --fd6ffp37: 12px;
  --fd6ffp38: 20px;
  --fd6ffp39: 8.5313px;
  --fd6ffp3a: -0.4642em;
  --fd6ffp3b: -0.4915em;
  --fd6ffp3c: 14px;
  --fd6ffp3d: 20px;
  --fd6ffp3e: 9.9531px;
  --fd6ffp3f: -0.3451em;
  --fd6ffp3g: -0.3725em;
  --fd6ffp3h: 14px;
  --fd6ffp3i: 20px;
  --fd6ffp3j: 9.9531px;
  --fd6ffp3k: -0.3451em;
  --fd6ffp3l: -0.3725em;
  --fd6ffp3m: 16px;
  --fd6ffp3n: 24px;
  --fd6ffp3o: 11.375px;
  --fd6ffp3p: -0.3809em;
  --fd6ffp3q: -0.4082em;
  --fd6ffp3r: 16px;
  --fd6ffp3s: 24px;
  --fd6ffp3t: 11.375px;
  --fd6ffp3u: -0.3809em;
  --fd6ffp3v: -0.4082em;
  --fd6ffp3w: 18px;
  --fd6ffp3x: 28px;
  --fd6ffp3y: 12.7969px;
  --fd6ffp3z: -0.4086em;
  --fd6ffp40: -0.436em;
  --fd6ffp41: 18px;
  --fd6ffp42: 28px;
  --fd6ffp43: 12.7969px;
  --fd6ffp44: -0.4086em;
  --fd6ffp45: -0.436em;
  --fd6ffp46: 400;
  --fd6ffp47: 600;
  --fd6ffp48: 700;
  --fd6ffp49: 28px;
  --fd6ffp4a: 36px;
  --fd6ffp4b: 19.9063px;
  --fd6ffp4c: -0.2737em;
  --fd6ffp4d: -0.3011em;
  --fd6ffp4e: 42px;
  --fd6ffp4f: 44px;
  --fd6ffp4g: 29.8594px;
  --fd6ffp4h: -0.1547em;
  --fd6ffp4i: -0.182em;
  --fd6ffp4j: 21px;
  --fd6ffp4k: 32px;
  --fd6ffp4l: 14.9297px;
  --fd6ffp4m: -0.3928em;
  --fd6ffp4n: -0.4201em;
  --fd6ffp4o: 28px;
  --fd6ffp4p: 36px;
  --fd6ffp4q: 19.9063px;
  --fd6ffp4r: -0.2737em;
  --fd6ffp4s: -0.3011em;
  --fd6ffp4t: 21px;
  --fd6ffp4u: 28px;
  --fd6ffp4v: 14.9297px;
  --fd6ffp4w: -0.2975em;
  --fd6ffp4x: -0.3249em;
  --fd6ffp4y: 21px;
  --fd6ffp4z: 28px;
  --fd6ffp50: 14.9297px;
  --fd6ffp51: -0.2975em;
  --fd6ffp52: -0.3249em;
  --fd6ffp53: 18px;
  --fd6ffp54: 28px;
  --fd6ffp55: 12.7969px;
  --fd6ffp56: -0.4086em;
  --fd6ffp57: -0.436em;
  --fd6ffp58: 18px;
  --fd6ffp59: 28px;
  --fd6ffp5a: 12.7969px;
  --fd6ffp5b: -0.4086em;
  --fd6ffp5c: -0.436em;
  --fd6ffp5d: 400;
  --fd6ffp5e: 600;
  --fd6ffp5f: none;
  --fd6ffp5g: 24px;
  --fd6ffp5h: 20px;
  --fd6ffp5i: transform 0.125s ease, opacity 0.125s ease;
  --fd6ffp5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --fd6ffp5k: scale(0.95);
  --fd6ffp5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --fd6ffp5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --fd6ffp5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._1f50cgl6 {
  background: var(--_1f50cgl0);
}
._1f50cgl7 {
  background: var(--_1f50cgl1);
}
._1f50cgl8 {
  background: var(--_1f50cgl2);
}
._1f50cgl9 {
  background: var(--_1f50cgl3);
}
._1f50cgla {
  background: var(--_1f50cgl4);
}
._1f50cglb {
  background: var(--_1f50cgl5);
}
html:not(._1xwqgg7z) ._1f50cglc {
  --_1f50cgl0: var(--fd6ffpw);
  --_1f50cgl1: var(--fd6ffpp);
  --_1f50cgl2: var(--fd6ffpu);
  --_1f50cgl3: var(--fd6ffph);
  --_1f50cgl4: var(--fd6ffpj);
  --_1f50cgl5: var(--fd6ffpn);
}
html:not(._1xwqgg7z) ._1f50cgld {
  --_1f50cgl0: var(--fd6ffpx);
  --_1f50cgl1: var(--fd6ffpq);
  --_1f50cgl2: var(--fd6ffpv);
  --_1f50cgl3: var(--fd6ffpi);
  --_1f50cgl4: var(--fd6ffpk);
  --_1f50cgl5: var(--fd6ffpo);
}
html._1xwqgg7z ._1f50cgle {
  --_1f50cgl0: var(--fd6ffpw);
  --_1f50cgl1: var(--fd6ffpp);
  --_1f50cgl2: var(--fd6ffpu);
  --_1f50cgl3: var(--fd6ffph);
  --_1f50cgl4: var(--fd6ffpj);
  --_1f50cgl5: var(--fd6ffpn);
}
html._1xwqgg7z ._1f50cglf {
  --_1f50cgl0: var(--fd6ffpx);
  --_1f50cgl1: var(--fd6ffpq);
  --_1f50cgl2: var(--fd6ffpv);
  --_1f50cgl3: var(--fd6ffpi);
  --_1f50cgl4: var(--fd6ffpk);
  --_1f50cgl5: var(--fd6ffpo);
}
._1f50cglg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1f50cglh {
  width: var(--fd6ffpe);
}
._1f50cgli {
  width: var(--fd6ffpa);
}
.xdred20 {
  margin-bottom: -0.1em;
}
.xdred22 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
.xdred20 .xdred22 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .xdred24 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--xdred23);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__1xwqgg7z,html.sprinkles_darkMode__1xwqgg7z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__1piqufd0 typography_lightModeTone_light__1fan4b818 typography_darkModeTone_dark__1fan4b81b">
+        <div class="reset_base__1bxiapk0 sprinkles_paddingBottom_gutter_mobile__1xwqgg77i sprinkles_paddingTop_gutter_mobile__1xwqgg76e sprinkles_paddingLeft_gutter_mobile__1xwqgg79q sprinkles_paddingRight_gutter_mobile__1xwqgg78m sprinkles_position_relative_mobile__1xwqgg75e typography_lightModeTone_light__1fan4b818 typography_darkModeTone_dark__1fan4b81b sprinkles_background_surface_lightMode__1xwqgg732 sprinkles_background_surfaceDark_darkMode__1xwqgg735">
+          <span class="reset_base__1bxiapk0 sprinkles_display_block_mobile__1xwqgg74y typography_fontFamily__1fan4b80 typography_fontWeight_regular__1fan4b81 typography_tone_neutral__1fan4b821 capsize_capsizeStyle__uo8yjc4 typography_textSize_large__1fan4b8d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
